feat: propagate device count in parental control groups
